split make_filelist functionality out of setupgs, to allow UAC restriction during packaging of the installer. Bug 691302

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11388 a1074d23-0009-0410-80fe-cf8c14f379e6